add some usefull package

--- a/package.json
+++ b/package.json
@@ -55,7 +55,16 @@
   "homepage": "https://github.com/hugoLarrousse/ManagementInterface#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
+    "graphql": "^14.0.0-rc.1",
+    "jsonwebtoken": "^8.2.2",
+    "lodash": "^4.17.10",
+    "moment-timezone": "^0.5.17",
+    "mongodb": "^2.2.1",
+    "winston": "^2.4.2"
   },
   "devDependencies": {
     "better-npm-run": "^0.1.0",
