--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": {
       "command": "node test/jasmineRun.js",
       "env": {
-        "NODE_ENV": "test", 
+        "NODE_ENV": "test",
         "JASMINE_CONFIG_PATH": "jasmine.json"
       }
     },
@@ -62,6 +62,7 @@
     "graphql": "^14.0.0-rc.1",
     "jsonwebtoken": "^8.2.2",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "moment-timezone": "^0.5.17",
     "mongodb": "^2.2.1",
     "sha1": "^1.1.1",
