--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "homepage": "https://github.com/hugoLarrousse/ManagementInterface#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "config": "^2.0.1",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
