--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
       }
     },
     "production": {
-      "command": "pm2 delete managementInterface && pm2 start server.js --name managementInterface",
+      "command": "npm install && pm2 delete managementInterface && pm2 start server.js --name managementInterface",
       "env": {
         "NODE_ENV": "production"
       }
